[package]
name = "region-scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Rifqi Fatchurrahman <muh_rif@live.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
